# CSimulator

./: .gitignore  .gitmodules  Makefile  README.md  dune-project  memory.c  memory.h  run_tests.sh  simulator.sh  template2.cpp
clib/: commons.h  main.c
for_later/: Accessibility.ml  Block.ml  Block.mli  DNF.ml  DNF.mli
lib/: Ast.ml  BlockSplitter.ml  DNF.ml  DNF.mli  Graph.ml  Graph.mli  Heap.ml  Heap.mli  Lexer.mll  NetlistToC.ml  Parser.mly  ParserUtils.ml  Position.ml  PrettyPrinter.ml  ProgramToGraph.ml  ProgramToGraph.mli  Scheduler.ml  ToC.ml  ToDot.ml  Variable.ml  Variable.mli  WriteLogic.ml  dune  template.c  template.cpp
lib/libc/: commons.h  dune  main.c
src/: graph.ml  netlist_simulator.ml  netlist_to_c.ml  template.cpp
test/: 2ram.net  2ram.out  boolOp.in  boolOp.net  boolOp.out  clock_div.out  cm2.in  cm2.out  concat.in  concat.net  concat.out  div2.in  div2.net  div2.out  fulladder.in  fulladder.out  mux.in  mux.net  mux.out  nadder.in  nadder.out  ram.1.in  ram.1.out  ram.2.in  ram.2.out  ram.3.in  ram.3.out  ram.4.in  ram.4.out  reg2.net  reg2.out  rom.in  rom.net  rom.out  selAndConc.net  selAndConc.out  select.in  select.net  select.out  slice.in  (+2 more)
